# maf-offerwall

./: .gitignore  README.md  note-A.md  note-B.md  pyproject.toml
analysis/: pyproject.toml
analysis/src/analysis/: analysis.py  forecast.py  utils.py
analysis/src/resources/: analysis_config-example.yml  forecast_config-example.yml
ranking/: pyproject.toml
ranking/results/: ranking_proposal_metrics.csv
ranking/src/ranking/: .env-example  ranking.py  utils.py
ranking/src/resources/: ranking_config-example.yml
