[project]
name = "ranking"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Rubboli",email = "luca.rubboli@libero.it"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "statsmodels (>=0.14.5,<0.15.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "holidays (>=0.83,<0.84)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-cloud-bigquery[pandas] (>=3.38.0,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poe.tasks]
run_ranking = "python ./src/ranking/ranking.py"

[tool.poetry]
packages = [{include = "ranking", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
